fix(calculateKpis): add some tests

--- a/packages/backend-modules/republik/.gitignore
+++ b/packages/backend-modules/republik/.gitignore
@@ -2,3 +2,4 @@ lib/portrait.js
 script/fixMissingPortraitUrls.js
 script/generateNewsletterHmac.js
 lib/calculateKpis/kpiCalculations.js
+__tests__/lib/calculateKpis/kpiCalculations.u.jest.js
