--- a/packages/backend-modules/payments/tsconfig.json
+++ b/packages/backend-modules/payments/tsconfig.json
@@ -7,7 +7,8 @@
      "moduleResolution": "Node16",
      "declaration": true,
      "declarationDir": "build/@types",
-     "declarationMap": true
+     "declarationMap": true,
+     "noImplicitAny": false,
    },
    "include": ["."],
    "exclude": ["node_modules", "__test__", "build"]
