--- a/packages/backend-modules/mailchimp/tsconfig.json
+++ b/packages/backend-modules/mailchimp/tsconfig.json
@@ -1,16 +1,22 @@
 {
-   "extends": "@orbiting/backend-modules-types/tsconfig-backend.json",
-   "compilerOptions": {
-     "outDir": "build",
-     "target": "ES2022",
-     "module": "Node16",
-     "moduleResolution": "Node16",
-     "declaration": true,
-     "declarationDir": "build/@types",
-     "declarationMap": true,
-     "noImplicitAny": false,
-     "allowJs": false,
-   },
-   "include": ["."],
-   "exclude": ["node_modules", "__tests__", "build", "./build/**/*", "./build/@types/**/*"]
- }
+  "extends": "@orbiting/backend-modules-types/tsconfig-backend.json",
+  "compilerOptions": {
+    "outDir": "build",
+    "target": "ES2022",
+    "module": "Node16",
+    "moduleResolution": "Node16",
+    "declaration": true,
+    "declarationDir": "build/@types",
+    "declarationMap": true,
+    "noImplicitAny": true,
+    "allowJs": false
+  },
+  "include": ["."],
+  "exclude": [
+    "node_modules",
+    "__tests__",
+    "build",
+    "./build/**/*",
+    "./build/@types/**/*"
+  ]
+}
