feat: make shop base url configurable, overlay style tweaks

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -10,6 +10,9 @@ NEXT_PUBLIC_ASSETS_SERVER_BASE_URL=http://localhost:5020
 # Used for external refs and enforing correct protocol and hostname
 NEXT_PUBLIC_BASE_URL=http://localhost:3010
 
+# Used for links to the shop
+NEXT_PUBLIC_SHOP_BASE_URL=http://localhost:3000
+
 # Used for links to CMS and CRM
 NEXT_PUBLIC_PUBLIKATOR_BASE_URL=http://localhost:3005
 NEXT_PUBLIC_ADMIN_BASE_URL=http://localhost:3006
