chore(payments): introduce shop url env variable for transactional links

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -42,6 +42,10 @@ FRONTEND_BASE_URL=http://localhost:3010
 # the urls of the frontends
 CORS_ALLOWLIST_URL=http://localhost:3003,http://localhost:3005,http://localhost:3006,http://localhost:3010
 
+# url to shop
+# used by transactionals
+SHOP_BASE_URL=http://localhost:3000
+
 #url to crowdfunding-admin
 # used by
 #  - slack to send link to profiles to SLACK_CHANNEL_ADMIN
