feat(payments): isolate webhook endpoint secrets

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -441,3 +441,9 @@ DOCUMENTS_SAMPLES=3
 
 # Referral Campaign
 STRIPE_REFERRAL_CAMPAIGN_COUPON_ID=
+
+# NEW Subscriptions
+YEARLY_SUBSCRIPTION_STRIPE_PRODUCT_ID=
+MONTLY_SUBSCRIPTION_STRIPE_PRODUCT_ID=
+PAYMENTS_PROJECT_R_STRIPE_ENDPOINT_SECRET=
+PAYMENTS_REPUBLIK_STRIPE_ENDPOINT_SECRET=
