--- a/apps/publikator/package.json
+++ b/apps/publikator/package.json
@@ -86,6 +86,7 @@
     "jsonlint-mod": "^1.7.6",
     "lodash": "^4.17.21",
     "next": "^14.2.3",
+    "next-themes": "^0.2.1",
     "prop-types": "^15.6.2",
     "query-string": "^7.1.1",
     "ramda": "^0.29.0",
