--- a/packages/styleguide/package.json
+++ b/packages/styleguide/package.json
@@ -85,6 +85,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lodash": "^4.17.21",
+    "next": "^14.2.3",
+    "next-themes": "^0.2.1",
     "prop-types": "^15.7.2",
     "react": "^18.3.1",
     "react-autocomplete": "^1.4.1",
