--- a/packages/backend-modules/payments/package.json
+++ b/packages/backend-modules/payments/package.json
@@ -9,6 +9,7 @@
     "@orbiting/backend-modules-scalars": "*",
     "@orbiting/backend-modules-types": "*",
     "@orbiting/backend-modules-auth": "*",
+    "@orbiting/backend-modules-utils": "*",
     "apollo-modules-node": "*",
     "body-parser": "^1.19.1",
     "stripe": "^16.1.0",
