--- a/packages/backend-modules/documents/package.json
+++ b/packages/backend-modules/documents/package.json
@@ -28,6 +28,7 @@
     "d3-time-format": "^2.2.3",
     "glamor": "^2.20.40",
     "@republik/mdast-react-render": "*",
+    "@republik/mdast-mail-templates": "*",
     "prop-types": "^15.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
