--- a/packages/mdast/mail-templates/package.json
+++ b/packages/mdast/mail-templates/package.json
@@ -44,6 +44,7 @@
   "peerDependencies": {
     "glamor": "^2.20.40",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "d3-time-format": "^2.2.3"
   }
 }
