feat(mdast-mail-template): pass with no tests flag

--- a/packages/mdast/mail-templates/package.json
+++ b/packages/mdast/mail-templates/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts --minify --clean --out-dir dist",
     "dev": "tsup src/index.ts --format cjs,esm --dts --minify --clean --out-dir dist --sourcemap --watch",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:dev": "jest --watch"
   },
   "devDependencies": {
