fix(backend): add missing monorepo deps

--- a/packages/backend-modules/search/package.json
+++ b/packages/backend-modules/search/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@orbiting/graphql-list-fields": "^2.0.2",
+    "@republik/remark-preset": "*",
     "apollo-modules-node": "*",
     "bluebird": "^3.7.2",
     "check-env": "^1.3.0",
