--- a/packages/backend-modules/discussions/package.json
+++ b/packages/backend-modules/discussions/package.json
@@ -27,6 +27,7 @@
     "glamor": "^2.20.40",
     "@republik/mdast-react-render": "*",
     "@republik/mdast-mail-templates": "*",
+    "@republik/remark-preset": "*",
     "prop-types": "^15.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
