fix: add  env example and typo fix

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -114,3 +114,6 @@ REVALIDATION_SECRET=
 
 # Disable Sentry while in development
 # SENTRY_DISABLE=true
+
+# Comma seperated list of IP's to block via middleware
+# IP_BLOCKLIST=
