style: wording and simplifications

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -117,3 +117,7 @@ REVALIDATION_SECRET=
 
 # Comma seperated list of IP's to block via middleware
 # IP_BLOCKLIST=
+
+# Ip Allowlist (comma seperated) and name of allowlist cookie (optional)
+# IP_ALLOWLIST=
+# IP_ALLOWLIST_COOKIE_NAME= 
