feat(payments/shop): allow to configure tex rate id using env

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -447,3 +447,4 @@ YEARLY_SUBSCRIPTION_STRIPE_PRODUCT_ID=
 MONTLY_SUBSCRIPTION_STRIPE_PRODUCT_ID=
 PAYMENTS_PROJECT_R_STRIPE_ENDPOINT_SECRET=
 PAYMENTS_REPUBLIK_STRIPE_ENDPOINT_SECRET=
+PAYMENTS_REPUBLIK_STRIPE_SUBSCRIPTION_TAX_ID=
