--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -448,3 +448,5 @@ MONTLY_SUBSCRIPTION_STRIPE_PRODUCT_ID=
 PAYMENTS_PROJECT_R_STRIPE_ENDPOINT_SECRET=
 PAYMENTS_REPUBLIK_STRIPE_ENDPOINT_SECRET=
 PAYMENTS_REPUBLIK_STRIPE_SUBSCRIPTION_TAX_ID=
+PAYMENTS_PROJECT_R_STRIPE_PAYMENTS_CONFIG_ID=
+PAYMENTS_REPUBLIK_STRIPE_PAYMENTS_CONFIG_ID=
