--- a/packages/backend-modules/payments/package.json
+++ b/packages/backend-modules/payments/package.json
@@ -12,7 +12,7 @@
     "@orbiting/backend-modules-utils": "*",
     "apollo-modules-node": "*",
     "body-parser": "^1.19.1",
-    "stripe": "^16.8.0-beta.1",
+    "stripe": "^17.4.0",
     "pogi": "^2.11.1"
   },
   "devDependencies": {
