--- a/packages/backend-modules/payments/package.json
+++ b/packages/backend-modules/payments/package.json
@@ -12,6 +12,7 @@
     "@orbiting/backend-modules-utils": "*",
     "apollo-modules-node": "*",
     "body-parser": "^1.19.1",
+    "crockford-base32": "^2.0.0",
     "pogi": "^2.11.1",
     "stripe": "^17.4.0"
   },
