--- a/packages/backend-modules/payments/package.json
+++ b/packages/backend-modules/payments/package.json
@@ -13,6 +13,7 @@
     "apollo-modules-node": "*",
     "body-parser": "^1.19.1",
     "crockford-base32": "^2.0.0",
+    "dayjs": "^1.11.13",
     "pogi": "^2.11.1",
     "stripe": "^17.4.0"
   },
