chore(www): exclude generated gql schema from git

--- a/apps/www/.gitignore
+++ b/apps/www/.gitignore
@@ -28,7 +28,7 @@ styled-system
 # Sentry Config File
 .sentryclirc
 !graphql/*/__generated__/gql/README.md
-graphql/*/__generated__/gql
+graphql/*/__generated__
 
 # Vercel
 .vercel
