--- a/apps/publikator/.gitignore
+++ b/apps/publikator/.gitignore
@@ -22,7 +22,7 @@ yarn-error.log*
 
 # Generated GQL types
 !graphql/*/__generated__/gql/README.md
-graphql/*/__generated__/gql
+graphql/*/__generated__
 
 # Vercel
 .vercel
