--- a/apps/project-r/.gitignore
+++ b/apps/project-r/.gitignore
@@ -28,7 +28,7 @@ styled-system
 # Sentry Config File
 .sentryclirc
 !graphql/*/__generated__/gql/README.md
-graphql/*/__generated__/gql
+graphql/*/__generated__
 
 # Vercel
 .vercel
