Remove Generated GraphQL Schemas (#975)
* chore(www): exclude generated gql schema from git

* chore: also remove schemas in admin and publikator

* chore: directly generate gql types from remote schema

* docs: update readme

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -18,8 +18,7 @@
     "lint": "next lint",
     "analyze": "ANALYZE=true next build",
     "prepare": "panda codegen",
-    "gql:types": "graphql-codegen --config graphql/configs/codegen-dev.ts",
-    "gql:schema": "graphql-codegen --config graphql/configs/codegen-schema.ts"
+    "gql:types": "graphql-codegen --config graphql/configs/codegen-dev.ts"
   },
   "repository": {
     "type": "git",
