feat(Questionnaire): create generic config-based overview and person view

--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -15,8 +15,9 @@
       ],
       "#graphql/*": [
         "./graphql/*"
-      ],
-    }
+      ]
+    },
+    "jsx": "react"
   },
   "include": [
     "next-env.d.ts",
