--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -23,7 +23,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "components/Questionnaire/Submissions/views/QuestionView.jsx"  ],
   "exclude": [
     "node_modules"
   ]
