feat(Pdf): add SCREENSHOT_SERVER_BASE_URL variable

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -158,6 +158,12 @@ DEFAULT_MAIL_FROM_NAME="Republik"
 #MAILCHIMP_API_KEY=
 
 #############
+# screenshots
+#############
+
+SCREENSHOT_SERVER_BASE_URL=http://localhost:3000
+
+#############
 # assets
 #############
 
