--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -18,7 +18,9 @@ NEXT_PUBLIC_PUBLIKATOR_BASE_URL=http://localhost:3005
 NEXT_PUBLIC_ADMIN_BASE_URL=http://localhost:3006
 
 NEXT_PUBLIC_ALLOWED_SIGNIN_REDIRECT_ORIGINS=http://localhost:3010,http://localhost:3005,http://localhost:3006,http://localhost:3000
-¨
+
+NEXT_PUBLIC_SCREENSHOT_SERVER_BASE_URL=http://localhost:3000
+
 # A CDN base url proxying your frontend url
 # - used for static folder assets
 # - in production as the next.js asset prefix
