--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -295,6 +295,7 @@ PARKING_USER_ID=
 # mailchimp setup
 MAILCHIMP_MAIN_LIST_ID=
 MAILCHIMP_PROBELESEN_AUDIENCE_ID=
+MAILCHIMP_REGWALL_TRIAL_AUDIENCE_ID=
 MAILCHIMP_ONBOARDING_AUDIENCE_ID=
 MAILCHIMP_PRODUKTINFOS_AUDIENCE_ID=
 MAILCHIMP_MARKETING_AUDIENCE_ID=
@@ -307,6 +308,8 @@ MAILCHIMP_INTEREST_MEMBER=
 MAILCHIMP_INTEREST_PLEDGE=
 MAILCHIMP_INTEREST_MEMBER_BENEFACTOR=
 MAILCHIMP_MARKETING_INTEREST_FREE_OFFERS_ONLY=
+
+REGWALL_TRIAL_CAMPAIGN_ID=
 
 # slack
 # used to notify about new comments, certain admin actions
