--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -307,6 +307,7 @@ MAILCHIMP_INTEREST_NEWSLETTER_PROJECTR=
 MAILCHIMP_INTEREST_MEMBER=
 MAILCHIMP_INTEREST_PLEDGE=
 MAILCHIMP_INTEREST_MEMBER_BENEFACTOR=
+MAILCHIMP_INTEREST_PAST_REGWALL_TRIAL=
 MAILCHIMP_MARKETING_INTEREST_FREE_OFFERS_ONLY=
 
 REGWALL_TRIAL_CAMPAIGN_ID=
