--- a/packages/backend-modules/assets/package.json
+++ b/packages/backend-modules/assets/package.json
@@ -20,6 +20,7 @@
     "link": "yarn link"
   },
   "dependencies": {
+    "@orbiting/backend-modules-keyCDN": "*",
     "aws-sdk": "^2.899.0",
     "bluebird": "^3.7.2",
     "check-env": "^1.3.0",
