--- a/packages/backend-modules/publikator/package.json
+++ b/packages/backend-modules/publikator/package.json
@@ -20,6 +20,8 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@orbiting/backend-modules-keyCDN": "*",
+    "@orbiting/backend-modules-assets": "*",
     "@orbiting/graphql-list-fields": "^2.0.2",
     "@republik/remark-preset": "*",
     "@rocka/mp3-duration": "^2.0.0",
